create base.html and use it in todo.html

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header class="header">
-    Flask Apps
+    <p>Flask Apps</p>
     <ul>
       <li><a href="{{link_home}}">Home Page</a></li>      
       <li><a href="{{link_todo}}">TODO App</a></li>      
