--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Home Page</h1>
   <header class="header">
-    Flask Apps
+    <p>Flask Apps</p>
     <ul>
       <li><a href="{{link_todo}}">TODO App</a></li>      
       <li><a href="{{link_blog}}">Blog</a></li>      
