--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   {% block head %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='general.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/general.css') }}">
   <title>{% block title %}Title{% endblock %}</title>
   {% endblock %}
 </head>
