--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,7 +2,7 @@
 
 {% block head %}
   {{super()}}
-  <link rel="stylesheet" href="{{ url_for('static', filename='blog.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/blog.css') }}">
   <script src="{{ url_for('static', filename='scripts/blog.js') }}"></script>
 {% endblock %}
 
