add and remove task using postgres

--- a/templates/todo.html
+++ b/templates/todo.html
@@ -31,7 +31,7 @@
   {% endfor %}
 
   <form action="/api/task" method="post">
-    <input name="content" type="text" placeholder="Enter task...">
+    <input name="title" type="text" placeholder="Enter task...">
     <!-- <input type="submit" value="Submit"> -->
     <button>Add task</button>
   </form>
