use sqlalchemy instead of psycopg2

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,8 +18,8 @@
   <h2>Messages</h2>
   {% for message in messages %}
     <div class="message js-message-{{ message['id'] }}">
-      <h3>Title: {{message["title"]}} </h3>
-      <p>{{message["content"]}}</p>
+      <h3>{{ message["title"] }}</h3>
+      <p>{{ message["content"] }}</p>
       <button class="edit-btn js-edit-btn" data-message-id="{{message['id']}}">
         Edit
       </button>
