--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,14 +6,14 @@
   <script src="{{ url_for('static', filename='scripts/blog.js') }}"></script>
 {% endblock %}
 
-{% block title %}Blog{% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block link_home %} {{ link_home }} {% endblock %}
 {% block link_todo %} {{ link_todo }} {% endblock %}
 {% block link_blog %} {{ link_blog }} {% endblock %}
 
 {% block main%}
-  <h1>Pascal Blog</h1>
+  <h1> {{ title }} </h1>
 
   <h2>Messages</h2>
   {% for message in messages %}
