--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,14 @@
 
 {% block head %} {{ super() }} {% endblock %}
 
-{% block title %}Home Page{% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block link_home %} {{ link_home }} {% endblock %}
 {% block link_todo %} {{ link_todo }} {% endblock %}
 {% block link_blog %} {{ link_blog }} {% endblock %}
 
 {% block main %}
-  <h1>Home Page</h1>
+  <h1> {{ title }} </h1>
   <h2>Who am I?</h2>
   <p>
     I am Pascal 🧑🏽‍🦱. I study Computer Science in RSSU 🎓. Making fullstack applications.
