--- a/templates/blog.html
+++ b/templates/blog.html
@@ -28,7 +28,7 @@
     </div>
   {% endfor %}
 
-  <form action="/api/message" method="post">
+  <form action="{{ url_for('add_message_from_form') }}" method="post">
     <input name="title" type="text" placeholder="Title...">
     <input name="content" type="text" placeholder="Content...">
     <!-- <input type="submit" value="Add"> -->
