--- a/templates/todo.html
+++ b/templates/todo.html
@@ -26,7 +26,7 @@
     </div>
   {% endfor %}
 
-  <form action="/api/task" method="post">
+  <form action="{{ url_for('add_task_from_form') }}" method="post">
     <input name="title" type="text" placeholder="Enter task...">
     <!-- <input type="submit" value="Submit"> -->
     <button>Add task</button>
