--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
       <li><a href="{{ url_for('home') }}">Home Page</a></li>      
       <li><a href="{{ url_for('todo') }}">TODO App</a></li>      
       <li><a href="{{ url_for('blog') }}">Blog</a></li>      
+      <li><a href="{{ url_for('rmbg') }}">Remove Background</a></li>      
     </ul>
   </header>
   <hr>
