--- a/templates/rmbg.html
+++ b/templates/rmbg.html
@@ -10,7 +10,7 @@
   <h1>{{ title }}</h1>
   <h2>Upload file</h2>
   <form action="{{ url_for('rmbg') }}" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" id="" >
+    <input type="file" name="file" accept="image/png" >
     <button>Remove background</button>
   </form>
 {% endblock %}
