--- a/templates/todo.html
+++ b/templates/todo.html
@@ -14,11 +14,10 @@
   {% for task in tasks %}
     <div class="task js-task" data-task-id="{{ task['id'] }}">
       <span>{{ task["title"] }}</span>
-      {% if  task["checked"] == True %}
-        <input type="checkbox" checked data-task-id="{{ task['id'] }}">
-      {% else %}
-        <input type="checkbox" data-task-id="{{ task['id'] }}">
-      {% endif %}
+        <input type="checkbox" 
+          {% if  task["checked"] %} checked {% endif %}
+          data-task-id="{{ task['id'] }}"
+        >
       <button class="edit-btn js-edit-btn-{{ task['id'] }}">Edit</button>
       <button class="save-btn js-save-btn-{{ task['id'] }}">Save</button>
       <button class="js-delete-btn-{{ task['id'] }}">Delete</button>
